<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Data Recovery - Photo Recovery</string>
    <string name="photo_recovery">Photo\nRecovery</string>
    <string name="file_found">Files found</string>
    <string name="folder_found">Folders</string>
    <string name="sort_by">Sort by</string>
    <string name="restore_file">Restore File</string>
    <string name="ads">Ads</string>
    <string name="open_file">Open file</string>
    <string name="share_file">Share File</string>
    <string name="file_protection">File Protection</string>
    <string name="no_file_protection">No Protection Files</string>
    <string name="only_items_deleted_after_30_days">Only items deleted from Restored File show here. They will be permanently deleted after 30 days</string>
    <string name="weekly">Weekly</string>
    <string name="flexible_upgrade">Flexible upgrade</string>
    <string name="weekly_cost">46,000đ /week</string>
    <string name="premium_access">Premium access</string>
    <string name="subscribe_to_access">Subscribe to access to all privileges</string>
    <string name="remove_all_ads">Remove all ads</string>
    <string name="more_powerful">More Powerful</string>
    <string name="faster">Faster</string>
    <string name="monthly">Monthly</string>
    <string name="save_up_to_50">Save up to 50%</string>
    <string name="monthly_cost">115,000đ /week</string>
    <string name="txt_continue">Continue</string>
    <string name="billed_annually">Billed Annually · Cancel Anytime</string>
    <string name="private_policy_underline">Privacy Policy</string>
    <string name="select_language">Select Language</string>
    <string name="not_found">No file found</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="restore">Restore</string>
    <string name="successfully_restored">Successfully Restored</string>
    <string name="share">Share App</string>
    <string name="value_file_found">%d Files were found</string>
    <string name="tap_scan_now">Tap scan now to start scanning</string>
    <string name="scan_now">Scan now</string>
    <string name="language_setting">Language</string>
    <string name="more_app">More App</string>
    <string name="rating">Rating</string>
    <string name="policy">Privacy policy</string>
    <string name="thank_you">For using our NFC - Card Reader App</string>
    <string name="exit_text">Do you want to exit?</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="scan">Scan</string>
    <string name="analyzing">Analyzing…</string>
    <string name="video_recovery">Video\nRecovery</string>
    <string name="audio_recovery">Audio\nRecovery</string>
    <string name="document_recovery">Document\nRecovery</string>
    <string name="restored_file">Restored\nFile</string>
    <string name="protected_file">Protected\nFile</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="delete_file">Delete File</string>
    <string name="warning_delete">Deleted file will be moved to Protection File and will be permanently deleted after 30 days. Are you sure to delete?</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="delete">Delete</string>
    <string name="remove_ads">REMOVE ADS</string>
    <string name="remove_all_anoying_ads_forever_by_just">Remove all anoying ads forever by just:</string>
    <string name="buy_now">Buy now</string>
    <string name="loading_ads">Loading Ads…</string>
    <string name="well_comeback">Welcome back</string>
    <string name="txt_s_files_found">%s files found !</string>
    <string name="txt_done_tap_the_open_file_to_restore_immediately">Tap the Open file to restore immediately</string>
    <string name="new_user_discount">New User Discount!</string>
    <string name="no_ads">No ads</string>
    <string name="powerful">Powerful</string>
    <string name="fastest">Fastest</string>
    <string name="_10_month">$10/month</string>
    <string name="billed_annually_cancel_any_time">Billed annually | Cancel any time</string>
    <string name="use_now">Use now</string>
    <string name="congratulation">Congratulation!</string>
    <string name="continue_with_free_version">Continue with free version</string>
    <string name="get_it_on_play_store">Get it on Play Store</string>
    <string name="sort_by_newest">Newest</string>
    <string name="sort_by_latest">Latest</string>
    <string name="sort_by_name_a_to_z">Name: A to Z</string>
    <string name="sort_by_name_z_to_a">Name: Z to A</string>
    <string name="sort_by_storage_min_to_max">Storage: Min to Max</string>
    <string name="sort_by_storage_max_to_min">Storage: Max to Min</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_app">Rate App</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="content_header">A Easy Way to Restore Deleted Files</string>
    <string name="feedback">Feedback</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="close">CLOSE</string>
    <string name="exit">EXIT</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure want to exit?</string>
    <string name="list_empty">List empty</string>
    <string name="restore_folder_path_photo">RestoredPhotos</string>
    <string name="restore_folder_path_video">RestoredVideos</string>
    <string name="restore_folder_path_audio">RestoredAudios</string>
    <string name="restore_folder_path_document">RestoredDocuments</string>
    <string name="delete_protection_file">Delete Protection File</string>
    <string name="delete_file_protection_not_restore">Files deleted from Protection File will not be allowed to restore. Are you sure to delete?</string>
    <string name="audios">Audios</string>
    <string name="were_found">were found</string>
    <string name="cannot_restore">Cannot restore, all items are unchecked!</string>
    <string name="document_type">Docs</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="granted_permission">Permission granted</string>
    <string name="denied_permission">Permission denied</string>
    <string name="error_permission_denided">You must grant read and write permissions to use this feature</string>
    <string name="this_permission">The app was not allowed to read or write to your storage. Hence, it cannot function properly. Please consider granting it this permission</string>
    <string name="permission_title">Permission request</string>
    <string name="request_permission_cause">This app can\'t run because it does not have the read and write permissions in Android 11. Please grant permission.</string>
    <string name="scan_wait">File scanning, please wait…</string>
    <string name="size_of_list_delete_when_clear">0</string>
    <string name="warning_empty_file_selected">Cannot delete file, all items are unchecked</string>
    <string name="stop_scanning">Stop scanning</string>
    <string name="scanning">Scanning…</string>
    <string name="completed">Completed!</string>
    <string name="value_photo_found">%d Photos were found</string>
    <string name="value_video_found">%d Videos were found</string>
    <string name="value_audio_found">%d Audios were found</string>
    <string name="value_document_found">%d Documents were found</string>
    <string name="restored_video">Restored Video</string>
    <string name="document">Documents</string>
    <string name="can_not_open_file">Can not open file !</string>
</resources>
