<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corner_8"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/tvtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/delete_file"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtTitle"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/rubik_regular"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/warning_delete"
        android:textAlignment="textStart"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWarning"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="@drawable/background_button_border_blue"
            android:backgroundTint="@color/gray_text"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/cancel_dialog"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/background_button_border_blue"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
</RelativeLayout>
