<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:tag="layout/activity_inapp_0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f6faff">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutWeekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_purchase_btn"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgFaster">

            <TextView
                android:id="@+id/tvWeekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:padding="@dimen/_1sdp"
                android:text="@string/weekly"
                android:textColor="@color/text_gray2"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWeeklyFeature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:padding="@dimen/_1sdp"
                android:text="@string/flexible_upgrade"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeekly" />

            <TextView
                android:id="@+id/tvWeeklyCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/weekly_cost"
                android:textColor="@color/text_gray4"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvPremiumAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="@dimen/_10sdp"
            android:text="@string/premium_access"
            android:textColor="@color/gntBlack"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgExit"
            app:srcCompat="@drawable/ic_in_app" />

        <ImageView
            android:id="@+id/imgExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_inapp_cancel" />

        <TextView
            android:id="@+id/tvSubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/subscribe_to_access"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPremiumAccess" />

        <ImageView
            android:id="@+id/imgNoAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubscribe"
            app:srcCompat="@drawable/ic_no_ads" />

        <ImageView
            android:id="@+id/imgPowerful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgNoAds"
            app:srcCompat="@drawable/ic_powerful" />

        <ImageView
            android:id="@+id/imgFaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPowerful"
            app:srcCompat="@drawable/ic_faster" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/remove_all_ads"
            android:textColor="@color/text_gray2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgNoAds"
            app:layout_constraintStart_toEndOf="@+id/imgNoAds"
            app:layout_constraintTop_toTopOf="@+id/imgNoAds" />

        <TextView
            android:id="@+id/tvPowerFul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/more_powerful"
            android:textColor="@color/text_gray2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgPowerful"
            app:layout_constraintStart_toEndOf="@+id/imgPowerful"
            app:layout_constraintTop_toBottomOf="@+id/imgNoAds" />

        <TextView
            android:id="@+id/tvFaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/faster"
            android:textColor="@color/text_gray2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgFaster"
            app:layout_constraintStart_toEndOf="@+id/imgFaster"
            app:layout_constraintTop_toBottomOf="@+id/imgPowerful" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutMonthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/bg_radius_100"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_20sdp"
            android:paddingBottom="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutWeekly">

            <TextView
                android:id="@+id/tvMonthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/monthly"
                android:textColor="@color/blue2"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtMonthlyDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:padding="@dimen/_1sdp"
                android:text="@string/save_up_to_50"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMonthly" />

            <TextView
                android:id="@+id/txtMonthlyCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/monthly_cost"
                android:textColor="@color/blue2"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#f6faff"
            android:drawableEnd="@drawable/ic_gradient_arrow"
            android:drawablePadding="@dimen/_4sdp"
            android:gravity="start|center_vertical"
            android:text="@string/txt_continue"
            android:textColor="@color/blue2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutMonthly" />

        <TextView
            android:id="@+id/txtBilled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/billed_annually"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue" />

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/_112sdp"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@color/grey6"
            android:padding="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="@+id/txtBilled"
            app:layout_constraintStart_toStartOf="@+id/txtBilled"
            app:layout_constraintTop_toBottomOf="@+id/txtBilled" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:padding="@dimen/_2sdp"
            android:text="@string/private_policy_underline"
            android:textColor="@color/blue2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/line"
            app:layout_constraintStart_toStartOf="@+id/line"
            app:layout_constraintTop_toBottomOf="@+id/line" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
