<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/nav_header" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/nav_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/policy"
                android:textAllCaps="false"
                android:textColor="@color/text191F"
                android:textSize="@dimen/_14sdp"
                app:drawableStartCompat="@drawable/ic_privacy_policy" />

            <TextView
                android:id="@+id/nav_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/language_setting"
                android:textColor="@color/text191F"
                android:textSize="@dimen/_14sdp"
                app:drawableStartCompat="@drawable/ic_ion_language" />

            <TextView
                android:id="@+id/nav_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/more_app"
                android:textColor="@color/text191F"
                android:textSize="@dimen/_14sdp"
                app:drawableStartCompat="@drawable/ic_more_app_new" />

            <TextView
                android:id="@+id/nav_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/share"
                android:textColor="@color/text191F"
                android:textSize="@dimen/_14sdp"
                app:drawableStartCompat="@drawable/ic_share_new" />

            <TextView
                android:id="@+id/nav_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:text="@string/feedback"
                android:textColor="@color/text191F"
                android:textSize="@dimen/_14sdp"
                app:drawableStartCompat="@drawable/ic_feedback" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
