<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr_discount1">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:src="@drawable/ic_frame_1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/new_user_discount"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClose" />

    <TextView
        android:id="@+id/tvSaveUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:text="@string/save_up_to_50"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvNoAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_checked_white"
        android:drawablePadding="5dp"
        android:text="@string/no_ads"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tvPower"
        app:layout_constraintTop_toBottomOf="@+id/tvSaveUp" />

    <TextView
        android:id="@+id/tvPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_checked_white"
        android:drawablePadding="5dp"
        android:text="@string/powerful"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@+id/tvNoAds"
        app:layout_constraintRight_toLeftOf="@+id/tvFastest"
        app:layout_constraintTop_toBottomOf="@+id/tvSaveUp" />

    <TextView
        android:id="@+id/tvFastest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:drawableLeft="@drawable/ic_checked_white"
        android:drawablePadding="5dp"
        android:text="@string/fastest"
        android:textColor="@color/white"
        app:layout_constraintLeft_toRightOf="@+id/tvPower"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSaveUp" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPower">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clOldPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv50per"
            app:layout_constraintTop_toBottomOf="@+id/tvFastest">

            <TextView
                android:id="@+id/tvOldPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/_10_month"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/tvOldPrice"
                app:layout_constraintRight_toRightOf="@+id/tvOldPrice"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv50per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bgr_sale_per"
            android:padding="3dp"
            android:text="50%OFF"
            android:textColor="@color/gntRed"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/clOldPrice"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFastest" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5$"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" / month"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:alpha="0.5"
        android:text="@string/billed_annually_cancel_any_time"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/ll2" />

    <TextView
        android:id="@+id/tvUseNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bgr_continues"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/use_now"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>
